<resources>
    <color name="dark">#121212</color>
    <string name="app_name">RateIt</string>
    <string name="title_activity_login">Sign in</string>
    <string name="nick">Nick</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register</string>
    <string name="title_activity_home_app">HomeApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nickname</string>
    <string name="nav_header_subtitle">email@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="new_release">New Release</string>
    <string name="popular">Popular</string>
    <string name="favourites">Favourites</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login">Login</string>
    <string name="registration">Register</string>
    <string name="configuration">Configuration</string>
    <string name="CDName">CDName</string>
    <string name="ArtistName">ArtistName</string>
</resources>
