<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/new_release"
            android:icon="@drawable/ic_new_releases"
            android:title="@string/new_release" />
        <item
            android:id="@+id/popular"
            android:icon="@drawable/ic_popular"
            android:title="@string/popular" />
        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_favourites"
            android:title="@string/favourites" />
    </group>

    <item
        android:id="@+id/configuration"
        android:title="@string/configuration">
        <menu>
            <item
                android:id="@+id/my_account"
                android:icon="@drawable/ic_account"
                android:title="@string/my_account" />
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>