<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.rateit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/new_release"
        android:name="com.example.rateit.ui.gallery.GalleryFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_new_release" />

    <fragment
        android:id="@+id/popular"
        android:name="com.example.rateit.ui.slideshow.SlideshowFragment"
        android:label="@string/popular"
        tools:layout="@layout/fragment_popular" />

    <fragment
        android:id="@+id/favourites"
        android:name="com.example.rateit.ui.tools.ToolsFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/my_account"
        android:name="com.example.rateit.ui.share.ShareFragment"
        android:label="@string/my_account"
        tools:layout="@layout/fragment_my_account" />

    <fragment
        android:id="@+id/settings"
        android:name="com.example.rateit.ui.send.SendFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>